Second step in migrating toward the L-world value types
Reviewed-by: acorn